Dataloader with time

--- a/dataloader/info.ipynb
+++ b/dataloader/info.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -136,12 +136,7 @@
      "output_type": "stream",
      "text": [
       "data/SAMPLE_001/RS.1.2.246.352.221.46272062591570509005209218152822185346.dcm\n",
-      "['CodingSchemeIdentificationSequence', 'ContextGroupIdentificationSequence', 'DeidentificationMethodCodeSequence', 'MappingResourceIdentificationSequence', 'ROIContourSequence', 'RTROIObservationsSequence', 'ReferencedFrameOfReferenceSequence', 'StructureSetROISequence']\n",
-      "[(0008,0102) Coding Scheme Designator            SH: '99VMS_STRUCTCODE'\n",
-      "(0008,010C) Coding Scheme UID                   UI: 1.2.246.352.7.3.10\n",
-      "(0008,0115) Coding Scheme Name                  ST: 'Structure Codes'\n",
-      "(0008,0116) Coding Scheme Responsible Organizat ST: 'Varian Medical Systems'(0008,0102) Coding Scheme Designator            SH: 'FMA'\n",
-      "(0008,010C) Coding Scheme UID                   UI: 2.16.840.1.113883.6.119]\n"
+      "['CodingSchemeIdentificationSequence', 'ContextGroupIdentificationSequence', 'DeidentificationMethodCodeSequence', 'MappingResourceIdentificationSequence', 'ROIContourSequence', 'RTROIObservationsSequence', 'ReferencedFrameOfReferenceSequence', 'StructureSetROISequence']\n"
      ]
     }
    ],
@@ -179,6 +174,26 @@
     "ds = pydicom.dcmread(path)\n",
     "print(ds.dir(\"sequence\"))\n",
     "#print(ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'20230616'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.ReviewDate"
    ]
   },
   {
