dataloader reviewdate fall back

--- a/dataloader/info.ipynb
+++ b/dataloader/info.ipynb
@@ -178,22 +178,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'20230616'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "InstanceCreationDate 20250408\n",
+      "PatientBirthDate \n",
+      "ReviewDate 20230616\n",
+      "StructureSetDate 20230616\n",
+      "StudyDate 20230605\n"
+     ]
     }
    ],
    "source": [
-    "ds.ReviewDate"
+    "dates_property_names = ds.dir(\"date\")\n",
+    "\n",
+    "for name in dates_property_names:\n",
+    "    print(name, getattr(ds, name))"
    ]
   },
   {
