did_became_bigger calculate mistake

--- a/dataloader/did_became_bigger.ipynb
+++ b/dataloader/did_became_bigger.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " \n",
     "from pair_dataset import PairDataset\n",
-    "\n",
     "\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import matplotlib.pyplot as plt\n",
@@ -26,8 +24,9 @@
     "\n",
     "dataset = PairDataset(rtstruct_path1, rtstruct_path2)\n",
     "\n",
-    "\n",
-    "dataset = PairDataset(rtstruct_path2, rtstruct_path1, (512, 512))"
+    "size = 128\n",
+    "size = 1024\n",
+    "dataset = PairDataset(rtstruct_path2, rtstruct_path1, (size, size))"
    ]
   },
   {
@@ -51,7 +50,7 @@
     "    ct_batch2 = batch[\"item2\"][\"ct\"]\n",
     "    z_positions = batch[\"item1\"][\"z_position\"]\n",
     "\n",
-    "    y_cutoff = 90\n",
+    "    y_cutoff = 87 * int(size / 128)\n",
     "\n",
     "    print(f\"CT batch shape: {ct_batch1.shape}\")\n",
     "    for i in range(ct_batch1.shape[0]):\n",
@@ -62,17 +61,45 @@
     "        ct_img1[y_cutoff:, :] = 0\n",
     "        ct_img2[y_cutoff:, :] = 0\n",
     "\n",
-    "        ct_img1 = np.where(ct_img1 > 0.5, 1, 0)\n",
-    "        ct_img2 = np.where(ct_img2 > 0.5, 1, 0)\n",
+    "        ct_img1 = np.where(ct_img1 > 0.2, 1, 0)\n",
+    "        ct_img2 = np.where(ct_img2 > 0.2, 1, 0)\n",
     "\n",
-    "        fig, axs = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "        diff_mask = (ct_img1 != ct_img2).astype(np.uint8)\n",
+    "\n",
+    "        overlay = np.stack(\n",
+    "            [diff_mask * 255, np.zeros_like(diff_mask), np.zeros_like(diff_mask)],\n",
+    "            axis=-1,\n",
+    "        )  # red mask\n",
+    "\n",
+    "        fig, axs = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "\n",
     "        axs[0].imshow(ct_img1, cmap=\"gray\")\n",
-    "        axs[0].set_title(f\"Item1 - Z: {z_pos}\")\n",
+    "        axs[0].set_title(f\"Item1 - Z: {z_pos} {y_cutoff}\")\n",
     "        axs[0].axis(\"off\")\n",
     "\n",
     "        axs[1].imshow(ct_img2, cmap=\"gray\")\n",
-    "        axs[1].set_title(f\"Item2 - Z: {z_pos}\")\n",
+    "        axs[1].set_title(f\"Item2 - Z: {z_pos} {y_cutoff}\")\n",
     "        axs[1].axis(\"off\")\n",
+    "\n",
+    "        num_diff_pixels = np.sum(diff_mask)\n",
+    "        num_white_pixels_img1 = np.sum(ct_img1 == 1)\n",
+    "        num_white_pixels_img2 = np.sum(ct_img2 == 1)\n",
+    "\n",
+    "        if (num_white_pixels_img1 + num_white_pixels_img2) > 0:\n",
+    "            diff_ratio = num_diff_pixels / (\n",
+    "                (num_white_pixels_img1 + num_white_pixels_img2) / 2\n",
+    "            )\n",
+    "        else:\n",
+    "            diff_ratio = 0.0\n",
+    "\n",
+    "        print(\n",
+    "            f\"Item {i} - Z: {z_pos} | Diff Pixels: {num_diff_pixels}, White Pixels (img2): {num_white_pixels_img2}, Ratio: {diff_ratio:.4f}\"\n",
+    "        )\n",
+    "\n",
+    "        axs[2].imshow(ct_img1, cmap=\"gray\")\n",
+    "        axs[2].imshow(overlay, alpha=0.6)  # semi-transparent red overlay\n",
+    "        axs[2].set_title(f\"Differences (red) Ratio: {diff_ratio:.4f} \")\n",
+    "        axs[2].axis(\"off\")\n",
     "\n",
     "        plt.tight_layout()\n",
     "        plt.show()\n",
@@ -87,13 +114,6 @@
     "\n",
     "\"\"\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
