did_became_bigger fix labels

--- a/did_became_bigger.ipynb
+++ b/did_became_bigger.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import sys\n",
-    "sys.path.append('dataloader')\n",
+    "\n",
+    "sys.path.append(\"dataloader\")\n",
     "\n",
     "from pair_dataset import PairDataset\n",
     "\n",
@@ -33,11 +33,11 @@
     "DATASET_PATH = \"dataloader/dataloader/data/full/SAMPLE_002\"\n",
     "\n",
     "rtstruct_path1 = (\n",
-    "        DATASET_PATH +\"/\" + \"/RS.1.2.246.352.221.4648407614349067913684963238765492101.dcm\"\n",
-    "    )\n",
+    "    DATASET_PATH + \"/\" + \"/RS.1.2.246.352.221.4648407614349067913684963238765492101.dcm\"\n",
+    ")\n",
     "rtstruct_path2 = (\n",
-    "        DATASET_PATH  +\"/\" +  \"RS.1.2.246.352.221.5699426928750258714918816447807823764.dcm\"\n",
-    "    )\n",
+    "    DATASET_PATH + \"/\" + \"RS.1.2.246.352.221.5699426928750258714918816447807823764.dcm\"\n",
+    ")\n",
     "\n",
     "dataset = PairDataset(rtstruct_path1, rtstruct_path2)\n",
     "\n",
@@ -79,22 +79,35 @@
     "dataloader = DataLoader(dataset, batch_size=4, shuffle=False)\n",
     "\n",
     "for batch in dataloader:\n",
-    "    print(f\"1 Batch shape: {batch['item1']['ct'].shape}\")\n",
-    "    display(batch[\"item2\"][\"ct\"])\n",
-    "    print(f\"2 Batch shape: {batch['item1']['ct'].shape}\")\n",
+    "    #  display(batch[\"item2\"] )\n",
     "\n",
     "    ct_batch1 = batch[\"item1\"][\"ct\"]\n",
     "    ct_batch2 = batch[\"item2\"][\"ct\"]\n",
     "    z_positions = batch[\"item1\"][\"z_position\"]\n",
     "\n",
-    "    y_cutoff = 500 * int(size / 128)\n",
+    "    y_cutoff = 91 * int(size / 128)\n",
     "\n",
-    "    print(f\"CT batch shape: {ct_batch1.shape}\")\n",
+    "    #  print( batch[\"item1\"][\"review_date\"] )\n",
+    "    #   print( batch[\"item2\"][\"review_date\"] )\n",
+    "\n",
+    "    #   print(f\"CT batch shape: {ct_batch1.shape}\")\n",
     "    for i in range(ct_batch1.shape[0]):\n",
     "        # Convert tensors to NumPy arrays\n",
     "        ct_img1 = ct_batch1[i, 0].detach().cpu().numpy()  # [H, W]\n",
     "        ct_img2 = ct_batch2[i, 0].detach().cpu().numpy()\n",
-    "        z_pos = z_positions[i].item() if hasattr(z_positions[i], \"item\") else z_positions[i]\n",
+    "        z_pos = (\n",
+    "            z_positions[i].item() if hasattr(z_positions[i], \"item\") else z_positions[i]\n",
+    "        )\n",
+    "\n",
+    "        date_string1 = str(batch[\"item1\"][\"review_date\"][i])\n",
+    "        formatted_date1 = (\n",
+    "            date_string1[:4] + \" \" + date_string1[4:6] + \" \" + date_string1[6:]\n",
+    "        )\n",
+    "\n",
+    "        date_string2 = str(batch[\"item2\"][\"review_date\"][i])\n",
+    "        formatted_date2 = (\n",
+    "            date_string2[:4] + \" \" + date_string2[4:6] + \" \" + date_string2[6:]\n",
+    "        )\n",
     "\n",
     "        # Convert to SimpleITK images\n",
     "        planning_ct_img = sitk.GetImageFromArray(ct_img1)\n",
@@ -103,11 +116,13 @@
     "        # Apply smoothing\n",
     "        smoothed_planning = sitk.SmoothingRecursiveGaussian(planning_ct_img, sigma=2.0)\n",
     "        smoothed_cbct = sitk.SmoothingRecursiveGaussian(cbct_img, sigma=2.0)\n",
-    "        \n",
-    "      #   smoothed_planning = planning_ct_img\n",
-    "      #    smoothed_cbct = cbct_img\n",
+    "\n",
+    "        #   smoothed_planning = planning_ct_img\n",
+    "        #    smoothed_cbct = cbct_img\n",
     "        # Perform rigid registration\n",
-    "        global_transform = perform_rigid_registration_v2(smoothed_planning, smoothed_cbct)\n",
+    "        global_transform = perform_rigid_registration_v2(\n",
+    "            smoothed_planning, smoothed_cbct\n",
+    "        )\n",
     "\n",
     "        # Resample CBCT to align with Planning CT\n",
     "        moving_image_global_aligned = sitk.Resample(\n",
@@ -116,7 +131,7 @@
     "            global_transform,\n",
     "            sitk.sitkLinear,\n",
     "            -1000,\n",
-    "            smoothed_cbct.GetPixelID()\n",
+    "            smoothed_cbct.GetPixelID(),\n",
     "        )\n",
     "\n",
     "        # Convert registered images back to NumPy\n",
@@ -143,11 +158,11 @@
     "        fig, axs = plt.subplots(1, 3, figsize=(15, 5))\n",
     "\n",
     "        axs[0].imshow(ct_img1_bin, cmap=\"gray\")\n",
-    "        axs[0].set_title(f\"Item1 - Z: {z_pos} | Y Cutoff: {y_cutoff}\")\n",
+    "        axs[0].set_title(f\"{formatted_date1}  \", fontsize=18, fontweight=\"bold\")\n",
     "        axs[0].axis(\"off\")\n",
     "\n",
     "        axs[1].imshow(ct_img2_bin, cmap=\"gray\")\n",
-    "        axs[1].set_title(f\"Item2 - Z: {z_pos} | Y Cutoff: {y_cutoff}\")\n",
+    "        axs[1].set_title(f\"{formatted_date2}  \", fontsize=18, fontweight=\"bold\")\n",
     "        axs[1].axis(\"off\")\n",
     "\n",
     "        # Difference ratio\n",
@@ -164,7 +179,9 @@
     "\n",
     "        axs[2].imshow(ct_img1_bin, cmap=\"gray\")\n",
     "        axs[2].imshow(overlay, alpha=0.6)\n",
-    "        axs[2].set_title(f\"Diffs (red) | Ratio: {diff_ratio:.4f}\")\n",
+    "        axs[2].set_title(\n",
+    "            f\"Difference: {diff_ratio:.4f}\", fontsize=18, fontweight=\"bold\"\n",
+    "        )\n",
     "        axs[2].axis(\"off\")\n",
     "\n",
     "        print(\n",
@@ -173,7 +190,7 @@
     "        )\n",
     "\n",
     "        plt.tight_layout()\n",
-    "        plt.show()\n"
+    "        plt.show()"
    ]
   },
   {
@@ -204,5 +221,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
